Bug 397105 - "plasmawindowed org.kde.plasma.networkmanagement" can't be closed correctly
Summary: "plasmawindowed org.kde.plasma.networkmanagement" can't be closed correctly
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-02 20:04 UTC by Lucas Willems
Modified: 2024-12-23 18:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.7
Sentry Crash Report:


Attachments
Screenshot of the error window (202.99 KB, image/png)
2018-08-02 20:04 UTC, Lucas Willems
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lucas Willems 2018-08-02 20:04:07 UTC
Created attachment 114273 [details]
Screenshot of the error window

When I execute "plasmawindowed org.kde.plasma.networkmanagement" and then try to close the window, I have an error window. Screenshot attached.
Comment 1 Jan Grulich 2018-08-06 08:16:01 UTC
Please attach backtrace from the crash and don't forget to install debug symbols for plasma-nm and networkmanager-qt.
Comment 2 Lucas Willems 2018-08-06 08:17:37 UTC
(In reply to Jan Grulich from comment #1)
> Please attach backtrace from the crash and don't forget to install debug
> symbols for plasma-nm and networkmanager-qt.

How do I attach backtrace? What is it?
And what is debug symbols for plasma-nm?
Comment 3 Jan Grulich 2018-08-06 08:21:18 UTC
Depends on your distribution, usually you can install them as package_name-debug or package_name-debuginfo or similarly, e.g. plasma-nm-debuginfo. You should get the backtrace from the "Developer information" tab in drkonqi, which is the dialog you get opened once this happens.
Comment 4 Jan Grulich 2018-08-06 10:28:03 UTC
I managed to reproduce this myself so you don't need to provide any additional data.
Comment 5 Lucas Willems 2018-08-06 20:42:00 UTC
Thank you for the work! and details :)
Comment 6 Kai Uwe Broulik 2018-08-07 09:45:48 UTC
Git commit 7a98c7d5e58a3afef1f85eafa92aed5ce1f30de9 by Kai Uwe Broulik.
Committed on 07/08/2018 at 09:45.
Pushed by broulik into branch 'Plasma/5.12'.

[Notifications Engine] Guard "this"

On teardown with the popup expanded, the cleanup handler might fire with us already having been deleted.
FIXED-IN: 5.12.7

Differential Revision: https://phabricator.kde.org/D14651

M  +5    -2    dataengines/notifications/notificationsengine.cpp

https://commits.kde.org/plasma-workspace/7a98c7d5e58a3afef1f85eafa92aed5ce1f30de9
Comment 7 Ben Cooksley 2024-12-23 18:26:03 UTC
Bulk transfer as requested in T17796