[Notifications Engine] Guard "this"

On teardown with the popup expanded, the cleanup handler might fire with us already having been deleted.

BUG: 397105
FIXED-IN: 5.12.7

Differential Revision: https://phabricator.kde.org/D14651